RESOLVED FIXED39741
qt_class.cpp has coding-style errors
https://bugs.webkit.org/show_bug.cgi?id=39741
Summary qt_class.cpp has coding-style errors
Anders Bakken
Reported 2010-05-26 09:12:03 PDT
WebCore/bridge/qt/qt_class.cpp:21: Found other header before a header this file implements. Should be: config.h, primary header, blank line, and then alphabetically sorted. [build/include_order] [4] WebCore/bridge/qt/qt_class.cpp:23: Found header this file implements after other header. Should be: config.h, primary header, blank line, and then alphabetically sorted. [build/include_order] [4] WebCore/bridge/qt/qt_class.cpp:28: Alphabetical sorting problem. [build/include_order] [4] WebCore/bridge/qt/qt_class.cpp:144: An else if statement should be written as an if statement when the prior "if" concludes with a return, break, continue or goto statement. [readability/control_flow] [4] WebCore/bridge/qt/qt_class.cpp:148: An else statement can be removed when the prior "if" concludes with a return, break, continue or goto statement. [readability/control_flow] [4] WebCore/bridge/qt/qt_class.cpp:161: Declaration has space between type name and * in QObject *child [whitespace/declaration] [3] WebCore/bridge/qt/qt_class.cpp:198: Declaration has space between type name and * in QObject *child [whitespace/declaration] [3] WebCore/bridge/qt/qt_class.cpp:140: An else statement can be removed when the prior "if" concludes with a return, break, continue or goto statement. [readability/control_flow] [4] Total errors found: 8 in 1 files dfb-47 [flow:~/dev/WebKit/WebCore/bridge/qt]
Attachments
Patch that fixes the coding style issues (3.83 KB, patch)
2010-05-26 09:49 PDT, Anders Bakken
no flags
Anders Bakken
Comment 1 2010-05-26 09:49:10 PDT
Created attachment 57103 [details] Patch that fixes the coding style issues
Petri Ojala
Comment 2 2010-05-26 21:35:31 PDT
QtTriaged
WebKit Commit Bot
Comment 3 2010-05-27 06:02:33 PDT
Comment on attachment 57103 [details] Patch that fixes the coding style issues Clearing flags on attachment: 57103 Committed r60296: <http://trac.webkit.org/changeset/60296>
WebKit Commit Bot
Comment 4 2010-05-27 06:02:40 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.