2010-05-27  Anders Bakken  <agbakken@gmail.com>

Reviewed by David Levin.

        qt_class.cpp has coding-style errors
        https://bugs.webkit.org/show_bug.cgi?id=39741

        Fix webkit coding style issues in qt_class.cpp

        * bridge/qt/qt_class.cpp:
        (JSC::Bindings::QtClass::fieldNamed):

Canonical link: https://commits.webkit.org/51347@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@60296 268f45cc-cd09-0410-ab3c-d52691b4dbfc