WebCore/bridge/qt/qt_class.cpp
@@ -18,14 +18,14 @@
  */
 
 #include "config.h"
-#include "Identifier.h"
-
 #include "qt_class.h"
+
+#include "Identifier.h"
 #include "qt_instance.h"
 #include "qt_runtime.h"
 
-#include <qmetaobject.h>
 #include <qdebug.h>
+#include <qmetaobject.h>
 
 namespace JSC {
 namespace Bindings {
@@ -144,21 +144,19 @@ Field* QtClass::fieldNamed(const Identifier& identifier, Instance* instance) con
             if (f->fieldType() == QtField::MetaProperty)
                 return f;
 #ifndef QT_NO_PROPERTIES
-            else if (f->fieldType() == QtField::DynamicProperty) {
+            if (f->fieldType() == QtField::DynamicProperty) {
                 if (obj->dynamicPropertyNames().indexOf(ascii) >= 0)
                     return f;
-                else {
-                    // Dynamic property that disappeared
-                    qtinst->m_fields.remove(name);
-                    delete f;
-                }
+                // Dynamic property that disappeared
+                qtinst->m_fields.remove(name);
+                delete f;
             }
 #endif
             else {
                 const QList<QObject*>& children = obj->children();
                 const int count = children.size();
                 for (int index = 0; index < count; ++index) {
-                    QObject *child = children.at(index);
+                    QObject* child = children.at(index);
                     if (child->objectName() == name)
                         return f;
                 }
@@ -195,7 +193,7 @@ Field* QtClass::fieldNamed(const Identifier& identifier, Instance* instance) con
         const QList<QObject*>& children = obj->children();
         const int count = children.count();
         for (index = 0; index < count; ++index) {
-            QObject *child = children.at(index);
+            QObject* child = children.at(index);
             if (child->objectName() == name) {
                 f = new QtField(child);
                 qtinst->m_fields.insert(name, f);
@@ -205,23 +203,22 @@ Field* QtClass::fieldNamed(const Identifier& identifier, Instance* instance) con
 
         // Nothing named this
         return 0;
-    } else {
-        // For compatibility with qtscript, cached methods don't cause
-        // errors until they are accessed, so don't blindly create an error
-        // here.
-        if (qtinst->m_methods.contains(ascii))
-            return 0;
+    }
+    // For compatibility with qtscript, cached methods don't cause
+    // errors until they are accessed, so don't blindly create an error
+    // here.
+    if (qtinst->m_methods.contains(ascii))
+        return 0;
 
 #ifndef QT_NO_PROPERTIES
-        // deleted qobject, but can't throw an error from here (no exec)
-        // create a fake QtField that will throw upon access
-        if (!f) {
-            f = new QtField(ascii);
-            qtinst->m_fields.insert(name, f);
-        }
-#endif
-        return f;
+    // deleted qobject, but can't throw an error from here (no exec)
+    // create a fake QtField that will throw upon access
+    if (!f) {
+        f = new QtField(ascii);
+        qtinst->m_fields.insert(name, f);
     }
+#endif
+    return f;
 }
 
 }
